Fix container spacing on grants show

--- a/src/Components/design/Container/Container.css
+++ b/src/Components/design/Container/Container.css
@@ -4,7 +4,7 @@
 
 .container--centered {
   margin: 0 auto;
-  width: 60%;
+  width: 80%;
   padding: 0;
 }
 
